--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.8.3"
+    "astro": "^4.8.3",
+    "d3": "^7.9.0",
+    "d3-array": "^3.2.4",
+    "d3-scale-chromatic": "^3.1.0",
+    "solid-js": "^1.8.17"
   }
 }
